--- a/netsoft_paper.tex
+++ b/netsoft_paper.tex
@@ -197,8 +197,8 @@ In this paper, our QoS integrates with a flow classification engine and offers t
 
 
 
-\subsection{Application Identifier}
-Application identification is to identify each flow as an application name to enable QoS management system to do bandwidth control or distribution at application level. A flow is defined by 5-tuple (source IP, source port, destination IP, destination port, and transport layer protocol). Applications include desktop applications, native mobile applications, and web applications, such as Facebook, Skype, YouTube, Instagram, Line and WeChat. We use supervised machine learning and a method based on inspecting domain name service (DNS) responses to do flow classification. After application identification system classifies a flow as an application name, it sends the classification result to a server with database. The server stores the classification result into database, and waits for query with 5-tuple from QoS management system. The detail will be described in section \ref{sec:app_identification}.
+\subsection{Application Identification}
+Application identification is to identify each flow as an application name to enable QoS management system to do bandwidth control or distribution at application level \cite{dynamic-qos-umeida}\cite{network-slicing-asia-pacific}. The application name means the name of application which establishes the flow. A flow is defined by 5-tuple (source IP, source port, destination IP, destination port, and transport layer protocol). Applications include desktop applications, native mobile applications, and web applications, such as Facebook, Skype, YouTube, Instagram, Line and WeChat. We use supervised machine learning and a method based on inspecting domain name service (DNS) responses to do flow classification. After application identification system classifies a flow as an application name, it sends the classification result to a server with database. The server stores the classification result into the database, and waits for requests from QoS management system. The detail will be described in section \ref{sec:app_identification}.
 
 
 
@@ -373,8 +373,8 @@ To reduce the burden of the controller, we put QoS flow table ahead of forwardin
 
 
 \section{Application Identification Method}\label{sec:app_identification}
-In order to let QoS management system be able to control or distribute bandwidth at application level, we designed and implemented an application identification system (also called flow classification system) to judge each flow is established by what application. In other words, the system can classify each flow as an application name in real time, rather than a rough category or a transport layer protocol.
-We use supervised machine learning (ML) and a method based on inspecting domain name service (DNS) responses to do flow classification. Except for DNS responses, the system only analyzes transport layer information of packets without inspecting their payload.
+In order to let QoS management system be able to control or distribute bandwidth at application level, we designed and implemented an application identification system (also called flow classification system) to judge each flow is established by what application. In other words, the application identification system can classify each flow as an application name in real time, rather than a rough category or a transport layer protocol. The corresponding application name of a flow means the name of the application which establishes the flow. We use supervised machine learning (ML) and a method based on inspecting domain name service (DNS) responses to do flow classification. The system analyzes the packets whose transport protocol are TCP or UDP. Except for DNS responses, the system only reads headers to get transport layer information of packets without inspecting their payload.
+
 
 \subsection{Architecture of application identification system}
 There are training phase (also called preparation phase) and classifying phase, their architectures are shown in Fig. \ref{fig:class_training} and Fig. \ref{fig:class_classifying} respectively. These architectures can be integrated, and do training and classifying in the same time.
@@ -396,7 +396,8 @@ There are training phase (also called preparation phase) and classifying phase, 
 
 
 \subsection{Overall procedure of application identification}
-In training phase, we generate some data needed by ML and the method based on inspecting DNS responses. In classifying phase, if a flow meet some requirement, we use the method based on inspecting DNS response to classify; otherwise, we use ML to classify.
+In order to let QoS management system be able to control or distribute bandwidth at application level, we designed and implemented an application identification system (also called flow classification system) to judge each flow is established by what application. In other words, the application identification system can classify each flow as an application name in real time, rather than a rough category or a transport layer protocol. The corresponding application name of a flow means the name of the application which establishes the flow. We use supervised machine learning (ML) and a method based on inspecting domain name service (DNS) responses to do flow classification. The system analyzes the packets whose transport protocol are TCP or UDP. Except for DNS responses, the system only reads headers to get transport layer information of packets without inspecting their payload.
+
 
 
 
@@ -406,20 +407,20 @@ In classifying phase, the architecture is shown in Fig. \ref{fig:class_classifyi
 
 
 
-\subsection{Flow attributes we adopted in ML}
-In ML, when system calculates flow attributes, we only use transport layer information of packets which have payload. We use Application Round (APPR) proposed by [] to analyze flow behavior. We use number of packets, packet sizes, transmission time, transmission direction, throughput, and APPR to define flow attributes. There are 69 attributes in total, as defined in our previous work
+\subsection{Flow attributes we adopted in supervised ML}
+In ML, when system calculates flow attributes, we only use transport layer information of packets which have payload. We use Application Round (APPR) proposed by \cite{classfication-cloud} to analyze flow behavior. We use number of packets, packet sizes, transmission time, transmission direction, throughput, and APPR to define flow attributes. There are 69 attributes in total, as defined in our previous work \cite{Chia-Chin-master}.
 
 
 
-\subsection{Algorithms we adopted in ML}
-We use algorithms implemented by Weka, a famous open source ML tool developed at the University of Waikato. We call Weka Java API to build classification model. We use three algorithms, namely RandomSupSpace with RandomTree [], FilterClassifier with discretization and RandomTree [], and RandomCommittee with RandomTree [].
+
+\subsection{Algorithms we adopted in supervised ML}
+We use algorithms implemented by Weka, a famous open source ML tool developed at the University of Waikato. We call Weka Java API to build classification model. We use three algorithms, namely RandomSupSpace with RandomTree, FilterClassifier with discretization and RandomTree, and RandomCommittee with RandomTree.
 
 
 
 \subsection{Procedure of a method based on inspecting DNS response in our system}
-In training phase, we collect the mappings of server IP and application name. A mapping of server IP and application name means the application has ever establish connection with the server whose IP is the server IP, and the server IP has ever occurred in any DNS response we have captured.
-In classifying phase, we only use those mappings which have been used by one application to classify. When system detect a flow, we check whether source IP or destination IP of the flow match any server IP of those mappings. If it matches any server IP, we regard corresponding application name as classification result; otherwise, we use flow attributes of the flow and classification model to classify.
-
+In training phase, we collect the mappings of server IP and application name. A mapping of server IP and application name means the application has ever established connection with the server whose IP is the server IP, and the server IP has ever occurred in any DNS response we have captured.
+In classifying phase, we do not use those server IPs which have more than two corresponding applications among the mappings to classify. We only use server IPs which have one corresponding application in the mappings to classify. When system detect a flow, we check whether source IP or destination IP of the flow match any of these server IPs. If it matches, we regard corresponding application name as classification result; otherwise, we use flow attributes of the flow and classification model of supervised ML to classify.
 
 
 
@@ -459,12 +460,12 @@ As shown in Fig. \ref{fig:evaluation_nat_result}, the throughput value show that
 
 
 
-\subsection{Accuracy of Application Identification }
+\subsection{Accuracy of Application Identification}
 \subsubsection{Testing data set}
-Testing data set are mappings of flow attributes and ground truth (also called rules). This testing data set were generated by our system in our lab in National Tsing Hua University in Taiwan in 2016. We manually operated applications to generate traffic. After the system generated rules, it exported them into a file, because we wanted to do 10-fold cross validation on the testing data set. There are 14659 rules in total, and there are 137 applications if we view each platform version of an application as one application.
+Testing data set are mappings of flow attributes and ground truth. These mappings are also called rules. This testing data set were generated by our system in our lab in National Tsing Hua University in Taiwan. We manually operated applications to generate traffic. Each platform of an application took around 50 minutes. When the application identification system generated rules, it exported them into a file, because we wanted to do 10-fold cross validation on a testing data set. There are 14659 rules in total, and there are 137 applications if we count each platform version of an application as one application. The testing data set does not contain all of platform version of each application which is in this testing data set.
 
 \subsubsection{Validation method}
-Although the system can do online training and classifying, we do offline training and classifying, shown as Fig. \ref{fig:evaluation_classification}. More specifically, when we did online training to analyze traffic, get ground truth, and export the rules into a file. We do 10-fold cross validation on the rules. There are 10 rounds in 10-fold cross validation. Each round, we split testing data set into training dataset and classifying dataset.
+Although the system can do online training and classifying, we do offline training and classifying, shown as Fig. \ref{fig:evaluation_classification}. More specifically, when we did online training to analyze traffic, get ground truth, and export the rules into a file. We do 10-fold cross validation on the rules. There are 10 rounds in 10-fold cross validation. We split the data set into 10 subsets. At each round, we used 1 of 10 subsets as a classifying data set and the union of the other subsets as a training data set. Then we did 10 rounds, and each subset acted as the classifying data set exactly once. We implemented Classifier Light and Trainer Light, acting as Classifier and Trainer respectively without the function of analyzing traffic. Because there are labels in classifying data set, we can calculate accuracy.
 
 \begin{figure}[!t]
 \centering
@@ -474,10 +475,11 @@ Although the system can do online training and classifying, we do offline traini
 \end{figure}
 
 \subsubsection{Mapping of category names}
-We do name mapping on training dataset before we use training data set to build classification model, and do name mapping on classifying data set before we use classifying data set to calculate accuracy. The main reason is that some application have different ground truth in different operating system.
+Mapping of category names: At each round of 10-fold cross validation We do name mapping on training dataset before we use training data set to build classification model, and do name mapping on classifying data set before we use classifying data set to calculate accuracy. The main reason is that some application have different ground truth in different operating system. After name mapping, there are 99 categories in testing data set.
 
-\subsubsection{Accuracy matrices}
-To evaluate accuracy, we used precision, recall and F-measure (also called F1 score), as shown in Eq. (1), Eq. (2), and Eq. (3) []. In each round in 10-fold cross validation, we calculate precision and recall of each category to calculate F1 score of each category. After ten rounds, we calculate average
+\subsubsection{Accuracy matrices and results}
+To evaluate accuracy, we used precision, recall and F-measure (also called F1 score), as shown in Eq. (1), Eq. (2), and Eq. (3) []. In each round in 10-fold cross validation, we calculate precision and recall of each category to calculate F1 score of each category. After ten rounds, we calculate average F1 score of each category in 10 rounds. Table I shows F1 score of each category in top 40 most popular applications in testing data set. Next, we calculate average F1 score of all categories in 10 rounds, and we get 0.9062. The result (Table. \ref{table:classification_result}) shows it achieved high accuracy, which makes QoS possible to do bandwidth control or distribution at application level.
+
 
 \begin{equation}
 \label{eqn_1}
@@ -494,9 +496,35 @@ Recall = \dfrac{True\ positive}{True\ positive\ +\ False\ negative}
 F1\ score = \dfrac{2\times Precision\times Recall}{Precsion + Recall}
 \end{equation}
 
-\subsubsection{Accuracy analysis}
-
-
+\begin{table}[!t]
+\caption{40 POPULAR APPLICATIONS’ AVERAGE F1 SCORE IN 10 ROUNDS}
+\label{table:classification_result}
+\centering
+\begin{tabular}{|l|l|l|l|}
+\hline
+Application name    & Average F1 score    & Application name  & Average F1 score   \\ \hline
+OneDrive            & 0.991255            & Trello            & 0.988889           \\ \hline
+gamerAnimad         & 0.985714            & Dropbox           & 0.985714           \\ \hline
+AmazonMusi          & 0.977461            & MEGAsync          & 0.968889           \\ \hline
+MEGAsync            & 0.968889            & BattleNet         & 0.967812           \\  \hline
+Udacity             & 0.966667            & Lity              & 0.966427            \\ \hline
+Tumblr              & 0.964624            & Asana             & 0.963492            \\ \hline
+Skype               & 0.963117            & Twitch            & 0.963117            \\ \hline
+TeamViewer          & 0.946667            & FileZilla         & 0.946429            \\ \hline
+Agoda               & 0.944764            & TripAdvisor       & 0.942075            \\  \hline
+Pinterest           & 0.936026            & BBCNews           & 0.931049            \\  \hline
+LINE                & 0.923904            & Slack             & 0.920985            \\ \hline
+Twitter             & 0.917906            & Youku             & 0.913925            \\ \hline
+Evernote            & 0.912381            & Snapchat          & 0.912221            \\ \hline
+Weibo               & 0.910872            & WeChat            & 0.906349            \\ \hline
+GoogleDrive         & 0.896612            & Trivago           & 0.895406             \\ \hline
+iTunes              & 0.890464            & Netflix           & 0.876234             \\ \hline
+Facebook            & 0.868641            & Telegram          & 0.862222             \\ \hline
+Airbnb              & 0.857029            & Spotify           & 0.856971             \\ \hline
+Instagram           & 0.833465            & TED               & 0.829277             \\ \hline
+Tmall               & 0.799747            & YouTube           & 0.713084             \\ \hline
+\end{tabular}
+\end{table}
 
 \subsection{QoS Evaluation Limit Host bandwidth}
 
