add Umedia and john master paper

--- a/paper.bib
+++ b/paper.bib
@@ -39,7 +39,8 @@ school = {National Tsing University},
 address = {Taiwan},
 year = {2013}
 }
-%%%%
+
+% John Lin Umedia
 
 @techreport{onf-multi-tables,
 	Author = {Open Networking Foundation},
@@ -62,3 +63,329 @@ year = {2013}
 	title = {Toward an {SDN}-enabled {NFV} architecture},
 	journal = {{IEEE} Communications Magazine}
 }
+
+@inproceedings{nfv-home-environment,
+  doi = {10.1109/ccnc.2014.6940493},
+  url = {https://doi.org/10.1109%2Fccnc.2014.6940493},
+  year  = {2014},
+  month = {jan},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  author = {Zvika Bronstein and Eyal Shraga},
+  title = {{NFV} virtualisation of the home environment},
+  booktitle = {2014 {IEEE} 11th Consumer Communications and Networking Conference ({CCNC})}
+}
+
+@inproceedings{vcpe-enhance,
+  doi = {10.1109/cloudcom.2012.6427560},
+  url = {https://doi.org/10.1109%2Fcloudcom.2012.6427560},
+  year  = {2012},
+  month = {dec},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  author = {Pau Minoves and Ole Frendved and Bo Peng and Andrew Mackarel and Dave Wilson},
+  title = {Virtual {CPE}: Enhancing {CPE}{\textquotesingle}s deployment and operations through virtualization},
+  booktitle = {4th {IEEE} International Conference on Cloud Computing Technology and Science Proceedings}
+}
+
+@inproceedings{compare-vm-container,
+  doi = {10.1109/ispass.2015.7095802},
+  url = {https://doi.org/10.1109%2Fispass.2015.7095802},
+  year  = {2015},
+  month = {mar},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  author = {Wes Felter and Alexandre Ferreira and Ram Rajamony and Juan Rubio},
+  title = {An updated performance comparison of virtual machines and Linux containers},
+  booktitle = {2015 {IEEE} International Symposium on Performance Analysis of Systems and Software ({ISPASS})}
+}
+
+@inproceedings{sdn-qos-enable,
+  doi = {10.1109/icc.2015.7249290},
+  url = {https://doi.org/10.1109%2Ficc.2015.7249290},
+  year  = {2015},
+  month = {jun},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  author = {Davide Adami and Lisa Donatini and Stefano Giordano and Michele Pagano},
+  title = {A network control application enabling Software-Defined Quality of Service},
+  booktitle = {2015 {IEEE} International Conference on Communications ({ICC})}
+}
+
+@article{app-awareness-sdn,
+  author = {Qazi, Zafar Ayyub and Lee, Jeongkeun and Jin, Tao and Bellala, Gowtham and Arndt, Manfred and Noubir, Guevara},
+  title = {Application-awareness in SDN},
+  journal = {SIGCOMM Comput. Commun. Rev.},
+  issue_date = {October 2013},
+  volume = {43},
+  number = {4},
+  month = aug,
+  year = {2013},
+  issn = {0146-4833},
+  pages = {487--488},
+  numpages = {2},
+  url = {http://doi.acm.org/10.1145/2534169.2491700},
+  doi = {10.1145/2534169.2491700},
+  acmid = {2491700},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {application awareness, software-defined networking (sdn)},
+}
+
+@inproceedings{qoe-sdn,
+  doi = {10.1109/glocom.2014.7036990},
+  url = {https://doi.org/10.1109%2Fglocom.2014.7036990},
+  year  = {2014},
+  month = {dec},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  author = {Hyunwoo Nam and Kyung-Hwa Kim and Jong Yul Kim and Henning Schulzrinne},
+  title = {Towards {QoE}-aware video streaming using {SDN}},
+  booktitle = {2014 {IEEE} Global Communications Conference}
+}
+
+@article{ethane-control-enterprise,
+  author = {Casado, Martin and Freedman, Michael J. and Pettit, Justin and Luo, Jianying and McKeown, Nick and Shenker, Scott},
+  title = {Ethane: Taking Control of the Enterprise},
+  journal = {SIGCOMM Comput. Commun. Rev.},
+  issue_date = {October 2007},
+  volume = {37},
+  number = {4},
+  month = aug,
+  year = {2007},
+  issn = {0146-4833},
+  pages = {1--12},
+  numpages = {12},
+  url = {http://doi.acm.org/10.1145/1282427.1282382},
+  doi = {10.1145/1282427.1282382},
+  acmid = {1282382},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {architecture, management, network, security},
+}
+
+@article{openflow-campus-network,
+ author = {McKeown, Nick and Anderson, Tom and Balakrishnan, Hari and Parulkar, Guru and Peterson, Larry and Rexford, Jennifer and Shenker, Scott and Turner, Jonathan},
+ title = {OpenFlow: Enabling Innovation in Campus Networks},
+ journal = {SIGCOMM Comput. Commun. Rev.},
+ issue_date = {April 2008},
+ volume = {38},
+ number = {2},
+ month = mar,
+ year = {2008},
+ issn = {0146-4833},
+ pages = {69--74},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/1355734.1355746},
+ doi = {10.1145/1355734.1355746},
+ acmid = {1355746},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {ethernet switch, flow-based, virtualization},
+}
+
+@misc{nfvwp,
+  title= {Network Functions Virtualisation: An Introduction, Benefits, Enablers, Challenges and Call for Action, White Paper.},
+	Howpublished = {\url{http://portal.etsi.org/NFV/NFV_White_Paper.pdf}},}
+
+@misc{nec-vcpe,
+  title = {{NEC's} {vCPE} Solutions},
+  Howpublished = {\url{http://www.nec.com/en/global/solutions/tcs/vcpe/}},}
+
+@misc{opennaas,
+  title = {{OpenNaaS}},
+  Howpublished = {\url{http://opennaas.org/}},}
+
+@misc{vcpe-ericsson,
+  title = {Virtual {CPE} and Software Defined Networking},
+	Howpublished = {\url{http://www.ericsson.com/res/docs/2014/virtual-cpe-and-software-defined-networking.pdf}},}
+
+@misc{sp:openflow1.3,
+  title={OpenFlow Switch Specification},
+  number={1.3.0},
+  organization={Open Networking Foundation},
+  year={2012},
+  month={June},
+  Howpublished = {\url{https://www.opennetworking.org/images/stories/downloads/sdn-resources/onf-specifications/openflow/openflow-spec-v1.3.0.pdf}},}
+
+@misc{sp:openflow1.5,
+  title={OpenFlow Switch Specification},
+  number={1.3.0},
+  organization={Open Networking Foundation},
+  year={2012},
+  month={June},
+  Howpublished = {\url{https://www.opennetworking.org/images/stories/downloads/sdn-resources/onf-specifications/openflow/openflow-spec-v1.3.0.pdf}},}
+
+@misc{web:ryu,
+  title = {Ryu {SDN} Framework},
+  Howpublished = {\url{http://osrg.github.io/ryu/}},}
+
+% John Lin matser paper
+
+@inproceedings{laptop-sdn,
+  author = {Lantz, Bob and Heller, Brandon and McKeown, Nick},
+  title = {A Network in a Laptop: Rapid Prototyping for Software-defined Networks},
+  booktitle = {Proceedings of the 9th ACM SIGCOMM Workshop on Hot Topics in Networks},
+  series = {Hotnets-IX},
+  year = {2010},
+  isbn = {978-1-4503-0409-2},
+  location = {Monterey, California},
+  pages = {19:1--19:6},
+  articleno = {19},
+  numpages = {6},
+  url = {http://doi.acm.org/10.1145/1868447.1868466},
+  doi = {10.1145/1868447.1868466},
+  acmid = {1868466},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {emulation, open-flow, rapid prototyping, software defined networking, virtualization},
+}
+
+@inproceedings{management-opennass,
+  doi = {10.1109/saconet.2013.6654560},
+  url = {https://doi.org/10.1109%2Fsaconet.2013.6654560},
+  year  = {2013},
+  month = {jun},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  author = {Jordi Ferrer Riera and Eduard Escalona and Josep Batalle and Joan A. Garcia-Espin and Sergi Figuerola},
+  title = {Management of Virtual Infrastructures through {OpenNaaS}},
+  booktitle = {2013 International Conference on Smart Communications in Network Technologies ({SaCoNeT})}
+}
+
+@inproceedings{cloud4nfv,
+  doi = {10.1109/cloudnet.2014.6969010},
+  url = {https://doi.org/10.1109%2Fcloudnet.2014.6969010},
+  year  = {2014},
+  month = {oct},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  author = {Joao Soares and Miguel Dias and Jorge Carapinha and Bruno Parreira and Susana Sargento},
+  title = {Cloud4NFV: A platform for Virtual Network Functions},
+  booktitle = {2014 {IEEE} 3rd International Conference on Cloud Networking ({CloudNet})}
+}
+
+@inproceedings{multiple-cloud-framework,
+  doi = {10.1109/cloud.2012.104},
+  url = {https://doi.org/10.1109%2Fcloud.2012.104},
+  year  = {2012},
+  month = {jun},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  author = {Gregor von Laszewski and Javier Diaz and Fugang Wang and Geoffrey C. Fox},
+  title = {Comparison of Multiple Cloud Frameworks},
+  booktitle = {2012 {IEEE} Fifth International Conference on Cloud Computing}
+}
+
+@inproceedings{opennaas-solution,
+  doi = {10.1109/cloudcom.2013.107},
+  url = {https://doi.org/10.1109%2Fcloudcom.2013.107},
+  year  = {2013},
+  month = {dec},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  author = {Jose Ignacio Aznar and Manel Jara and Adrian Rosello and Dave Wilson and Sergi Figuerola},
+  title = {{OpenNaaS} Based Management Solution for Inter-data Centers Connectivity},
+  booktitle = {2013 {IEEE} 5th International Conference on Cloud Computing Technology and Science}
+}
+
+@inproceedings{netfate,
+  doi = {10.1109/netsoft.2015.7116179},
+  url = {https://doi.org/10.1109%2Fnetsoft.2015.7116179},
+  year  = {2015},
+  month = {apr},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  author = {A. Lombardo and A. Manzalini and G. Schembra and G. Faraci and C. Rametta and V. Riccobene},
+  title = {An open framework to enable {NetFATE} (Network Functions at the edge)},
+  booktitle = {Proceedings of the 2015 1st {IEEE} Conference on Network Softwarization ({NetSoft})}
+}
+
+@article{dynamo,
+  author = {DeCandia, Giuseppe and Hastorun, Deniz and Jampani, Madan and Kakulapati, Gunavardhan and Lakshman, Avinash and Pilchin, Alex and Sivasubramanian, Swaminathan and Vosshall, Peter and Vogels, Werner},
+  title = {Dynamo: Amazon's Highly Available Key-value Store},
+  journal = {SIGOPS Oper. Syst. Rev.},
+  issue_date = {December 2007},
+  volume = {41},
+  number = {6},
+  month = oct,
+  year = {2007},
+  issn = {0163-5980},
+  pages = {205--220},
+  numpages = {16},
+  url = {http://doi.acm.org/10.1145/1323293.1294281},
+  doi = {10.1145/1323293.1294281},
+  acmid = {1294281},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {performance, reliability, scalability},
+}
+
+@article{sd-home-network,
+  doi = {10.1109/tce.2014.6937340},
+  url = {https://doi.org/10.1109%2Ftce.2014.6937340},
+  year  = {2014},
+  month = {aug},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  volume = {60},
+  number = {3},
+  pages = {534--539},
+  author = {Jinyong Jo and Soyeon Lee and Jong Kim},
+  title = {Software-defined home networking devices for multi-home visual sharing},
+  journal = {{IEEE} Transactions on Consumer Electronics}
+}
+
+@inproceedings{residential-gateway,
+  doi = {10.1109/icsess.2010.5552422},
+  url = {https://doi.org/10.1109%2Ficsess.2010.5552422},
+  year  = {2010},
+  month = {jul},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  author = {Zhiqiang Wei and Jing Li and Yongquan Yang and Dongning Jia},
+  title = {A residential gateway architecture based on Cloud computing},
+  booktitle = {2010 {IEEE} International Conference on Software Engineering and Service Sciences}
+}
+
+@inproceedings{security-vgateway,
+  doi = {10.1109/securware.2009.18},
+  url = {https://doi.org/10.1109%2Fsecurware.2009.18},
+  year  = {2009},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  author = {Mario Ibanez and Natividad Mart{\'{\i}}nez Madrid and Ralf Seepold},
+  title = {Security Management with Virtual Gateway Platforms},
+  booktitle = {2009 Third International Conference on Emerging Security Information,  Systems and Technologies}
+}
+
+@misc{opennebula,
+  title = {{OpenNebula}},
+  Howpublished = {\url{https://opennebula.org/}},}
+
+@misc{openstack,
+  title = {{OpenStack}},
+  Howpublished = {\url{https://www.openstack.org/}},}
+
+@misc{onf,
+  title = {{Open Networking Foundation}},
+  Howpublished = {\url{https://www.opennetworking.org/index.php}},}
+
+@misc{netfpga,
+  title = {{NetFPGA}},
+  Howpublished = {\url{http://netfpga.org/site/#/}},}
+
+@misc{iperf,
+  title = {{iPerf}},
+  Howpublished = {\url{https://iperf.fr/iperf-doc.php}},}
+
+@misc{nox-pox,
+  title = {{NOX/POX}},
+  Howpublished = {\url{http://www.noxrepo.org/}},}
+
+@misc{floodlight,
+  title = {{Floodlight}},
+  Howpublished = {\url{http://www.projectfloodlight.org/floodlight/}},}
+
+@misc{opendaylight,
+  title = {{OpenDayLight}},
+  Howpublished = {\url{https://www.opendaylight.org/}},}
+
+@misc{onos,
+  title = {{ONOS}},
+  Howpublished = {\url{http://onosproject.org/}},}
+
+@misc{pica8-switch,
+  title = {{Pica8 OpenFlow-enabled switches}},
+  Howpublished = {\url{http://www.pica8.com/products/pre-loaded-switches}},}
+
+@misc{hp-switch,
+  title = {{HP OpenFlow-enabled switches}},
+  Howpublished = {\url{http://h17007.www1.hpe.com/cz/en/networking/solutions/technology/sdn/portfolio.aspx#infrastructure}},}
